# gaidme

./: CONTRIBUTING.md  README.md  pyproject.toml
src/gaidme/: .env.example  __init__.py  _errors.py  _logging.py  _shell.py  _tempfiles.py  _terminal.py  _version.py  cli.py  models.py  schema.py  test.py  utils.py
src/gaidme/_api/: ask.py  hidden.py  reflect.py
