[tool.poetry]
name = "gaidme"
version = "0.1.0"
repository = "https://github.com/mateusztylec/gaidme"
description = "cool AI-powered CLI tool"
authors = ["Mateusz Tylec <mateusztylec@duck.com>"]
license = "MIT"
readme = "README.md"
exclude = [".env"]

[tool.poetry.dependencies]
python = "^3.8"
openai = "^1.9.0"
python-dotenv = "^1.0.1"
pexpect = "^4.9.0"
shellingham = "^1.5.4"
pydantic = "^2.6.1"

[tool.poetry.scripts]
gaidme = "gaidme.cli:main"

[tool.poetry.group.dev.dependencies]
setuptools = "^69.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
